# crop-data-layer-2021-deckgl-raster

./: .gitignore  CDL_LAZYCOGS_REPORT.md  CLAUDE.md  NEXT.md  README.md  SESSION_NOTES.md  cdl-lazycogs-mosaic.ipynb  cdl-mpc-tiles.ipynb  cdl-multi-rasterlayer.ipynb  cdl-stac-mosaic.ipynb  main.py  pyproject.toml  raster-cog-cdl-pc.ipynb  raster-cog-nlcd-server.ipynb
.claude/memory/: MEMORY.md  from_stac_items_issue.md
deprecated/: README.md
web/: README.md  index.html  package-lock.json  package.json  vite-plugin-regen-stac.ts  vite.config.ts
web/scripts/: gen_palette.py  gen_stac.py
web/src/: App.tsx  categories.ts  cdlShaders.ts  palette.json  pick.ts  proj.ts  stats.ts
