[project]
name = "cdl-lonboard-05-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "morecantile>=7.0.3",
    "pystac-client>=0.9.0",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
]
